dev-test-ops-pro/devops/level4/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # No rewrite for the /ui path
    # If other paths need rewriting, define specific rules
    # nginx.ingress.kubernetes.io/rewrite-target: / # For example
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 80
